[gd_scene load_steps=6 format=3 uid="uid://b147334qat2au"]

[ext_resource type="Script" path="res://level/game/100.gd" id="1_l7vvu"]
[ext_resource type="TileSet" uid="uid://dq8de0dncuy7c" path="res://tileset/node0.tres" id="2_o8mln"]
[ext_resource type="PackedScene" uid="uid://bf6qu7jghwn2d" path="res://entity/gizmo/switch.tscn" id="5_4jtgv"]
[ext_resource type="Script" path="res://entity/gizmo/camera_anchor.gd" id="22_pfl8q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1c1y"]
size = Vector2(128, 128)

[node name="100" type="Node2D"]
script = ExtResource("1_l7vvu")

[node name="tilemap" type="TileMap" parent="."]
tile_set = ExtResource("2_o8mln")
rendering_quadrant_size = 64
format = 2
layer_0/name = "walls"
layer_0/z_index = 100
layer_0/tile_data = PackedInt32Array(-2752511, 0, 1, -2686975, 0, 1, -2621439, 0, 1, -2555903, 0, 1, -2490367, 0, 1, -2424831, 0, 1, -2359295, 0, 1, -2293759, 0, 1, -2228223, 0, 1, -2162687, 0, 1, -2097151, 0, 1, -2031615, 0, 1, -1966079, 0, 1, -1900543, 0, 1, -1835007, 0, 1, -1769471, 0, 1, -1703935, 0, 1, -1638399, 0, 1, -1572863, 0, 1, -1507327, 0, 1, -1441791, 0, 1, -1376255, 0, 1, -1310719, 0, 1, -1245183, 0, 1, -1179647, 0, 1, -1114111, 0, 1, -1048575, 0, 1, -983039, 0, 1, -917503, 0, 1, -851967, 0, 1, -786431, 0, 1, -720895, 0, 1, -655359, 0, 1, -589823, 0, 1, -524287, 0, 1, -458751, 0, 1, -393215, 0, 1, -327679, 0, 1, -262143, 0, 1, -196607, 0, 1, -2686978, 0, 1, -2621442, 0, 1, -2555906, 0, 1, -2490370, 0, 1, -2424834, 0, 1, -2359298, 0, 1, -2293762, 0, 1, -2228226, 0, 1, -2162690, 0, 1, -2097154, 0, 1, -2031618, 0, 1, -1966082, 0, 1, -1900546, 0, 1, -1835010, 0, 1, -1769474, 0, 1, -1703938, 0, 1, -1638402, 0, 1, -1572866, 0, 1, -1507330, 0, 1, -1441794, 0, 1, -1376258, 0, 1, -1310722, 0, 1, -1245186, 0, 1, -1179650, 0, 1, -1114114, 0, 1, -1048578, 0, 1, -983042, 0, 1, -917506, 0, 1, -851970, 0, 1, -786434, 0, 1, -720898, 0, 1, -655362, 0, 1, -589826, 0, 1, -524290, 0, 1, -458754, 0, 1, -393218, 0, 1, -327682, 0, 1, -262146, 0, 1, -196610, 0, 1, -131074, 0, 1, -131075, 0, 1, -65539, 0, 1, -3, 0, 1, 65533, 0, 1, 131069, 0, 1, 196605, 0, 1, 262141, 0, 1, 327677, 0, 1, 327678, 0, 1, 327679, 0, 1, 262144, 0, 1, 262145, 0, 1, 262146, 0, 1, -196606, 0, 1, -131070, 0, 1, -65534, 0, 1, 2, 0, 1, 65538, 0, 1, 131074, 0, 1, 196610, 0, 1, -2752510, 65536, 0, -2752509, 65536, 0, -2752508, 65536, 0, -2752507, 65536, 0, -2752506, 65536, 0, -2752505, 65536, 0, -2752504, 65536, 0, -2752503, 65536, 0, -2752502, 65536, 0, -2752501, 65536, 0, -2752500, 65536, 0, -2752499, 65536, 0, -2752498, 65536, 0, -2752497, 65536, 0, -2752496, 65536, 0, -2752495, 65536, 0, -2752494, 65536, 0, -2752493, 65536, 0, -2752492, 65536, 0, -2752491, 65536, 0, -2752490, 65536, 0, -2752489, 65536, 0, -2752488, 65536, 0, -2752487, 65536, 0, -2752486, 65536, 0, -2752485, 65536, 0, -2752484, 65536, 0, -2752483, 65536, 0, -2752482, 65536, 0, -2752481, 65536, 0, -2752480, 65536, 0, -2752479, 65536, 0, -2752478, 65536, 0, -2752477, 65536, 0, -2752476, 65536, 0, -2687013, 65536, 0, -2687012, 65536, 0, -2687011, 65536, 0, -2687010, 65536, 0, -2687009, 65536, 0, -2687008, 65536, 0, -2687007, 65536, 0, -2687006, 65536, 0, -2687005, 65536, 0, -2687004, 65536, 0, -2687003, 65536, 0, -2687002, 65536, 0, -2687001, 65536, 0, -2687000, 65536, 0, -2686999, 65536, 0, -2686998, 65536, 0, -2686997, 65536, 0, -2686996, 65536, 0, -2686995, 65536, 0, -2686994, 65536, 0, -2686993, 65536, 0, -2686992, 65536, 0, -2686991, 65536, 0, -2686990, 65536, 0, -2686989, 65536, 0, -2686988, 65536, 0, -2686987, 65536, 0, -2686986, 65536, 0, -2686985, 65536, 0, -2686984, 65536, 0, -2686983, 65536, 0, -2686982, 65536, 0, -2686981, 65536, 0, -2686980, 65536, 0, -2686979, 65536, 0, -4063269, 65536, 0, -3997733, 65536, 0, -3932197, 65536, 0, -3866661, 65536, 0, -3801125, 65536, 0, -3735589, 65536, 0, -3670053, 65536, 0, -3604517, 65536, 0, -3538981, 65536, 0, -3473445, 65536, 0, -3407909, 65536, 0, -3342373, 65536, 0, -3276837, 65536, 0, -3211301, 65536, 0, -3145765, 65536, 0, -3080229, 65536, 0, -3014693, 65536, 0, -2949157, 65536, 0, -2883621, 65536, 0, -2818085, 65536, 0, -2752549, 65536, 0, -4849701, 65536, 0, -4784165, 65536, 0, -4718629, 65536, 0, -4653093, 65536, 0, -4587557, 65536, 0, -4522021, 65536, 0, -4456485, 65536, 0, -4390949, 65536, 0, -4325413, 65536, 0, -4259877, 65536, 0, -4194341, 65536, 0, -4128805, 65536, 0, -4849700, 65536, 0, -4849699, 65536, 0, -4849698, 65536, 0, -4849697, 65536, 0, -4849696, 65536, 0, -4849695, 65536, 0, -4849694, 65536, 0, -4849693, 65536, 0, -4849692, 65536, 0, -4849691, 65536, 0, -4849690, 65536, 0, -4849689, 65536, 0, -4849688, 65536, 0, -4849687, 65536, 0, -4849686, 65536, 0, -4849685, 65536, 0, -4849684, 65536, 0, -3669980, 65536, 0, -3604444, 65536, 0, -3538908, 65536, 0, -3473372, 65536, 0, -3407836, 65536, 0, -3342300, 65536, 0, -3276764, 65536, 0, -3211228, 65536, 0, -3145692, 65536, 0, -3080156, 65536, 0, -3014620, 65536, 0, -2949084, 65536, 0, -2883548, 65536, 0, -2818012, 65536, 0, -4915164, 65536, 0, -4849628, 65536, 0, -4784092, 65536, 0, -4718556, 65536, 0, -4653020, 65536, 0, -4587484, 65536, 0, -4521948, 65536, 0, -4456412, 65536, 0, -4390876, 65536, 0, -4325340, 65536, 0, -4259804, 65536, 0, -4194268, 65536, 0, -4128732, 65536, 0, -4063196, 65536, 0, -3997660, 65536, 0, -3932124, 65536, 0, -3866588, 65536, 0, -3801052, 65536, 0, -3735516, 65536, 0, -4849683, 65536, 0, -4849682, 65536, 0, -4849681, 65536, 0, -4849680, 65536, 0, -4849679, 65536, 0, -4849678, 65536, 0, -4849677, 65536, 0, -4849676, 65536, 0, -4849675, 65536, 0, -4849674, 65536, 0, -4849673, 65536, 0, -4849672, 65536, 0, -4849671, 65536, 0, -4849670, 65536, 0, -4849669, 65536, 0, -4849668, 65536, 0, -4849667, 65536, 0, -4849666, 65536, 0, -4849665, 65536, 0, -4915200, 65536, 0, -4915199, 65536, 0, -4915198, 65536, 0, -4915197, 65536, 0, -4915196, 65536, 0, -4915195, 65536, 0, -4915194, 65536, 0, -4915193, 65536, 0, -4915192, 65536, 0, -4915191, 65536, 0, -4915190, 65536, 0, -4915189, 65536, 0, -4915188, 65536, 0, -4915187, 65536, 0, -4915186, 65536, 0, -4915166, 65536, 0, -4915165, 65536, 0, -4915185, 65536, 0, -4915184, 65536, 0, -4915183, 65536, 0, -4915182, 65536, 0, -4915181, 65536, 0, -4915180, 65536, 0, -4915179, 65536, 0, -4915178, 65536, 0, -4915177, 65536, 0, -4915170, 65536, 0, -4915169, 65536, 0, -4915168, 65536, 0, -4915171, 65536, 0, -4915172, 65536, 0, -4915173, 65536, 0, -4915174, 65536, 0, -4915175, 65536, 0, -4915176, 65536, 0, -4915167, 65536, 0)
layer_1/name = "floor"
layer_1/z_index = -100
layer_1/tile_data = PackedInt32Array(-65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 196606, 0, 0, 262142, 0, 0, 196607, 0, 0, 262143, 0, 0, 131072, 0, 0, 196608, 0, 0, 131073, 0, 0, 196609, 0, 0, -393217, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, -458752, 0, 0, -393216, 0, 0, -327680, 0, 0, -262144, 0, 0, -196608, 0, 0, -720897, 0, 0, -655361, 0, 0, -589825, 0, 0, -524289, 0, 0, -458753, 0, 0, -786432, 0, 0, -720896, 0, 0, -655360, 0, 0, -589824, 0, 0, -524288, 0, 0, -1048577, 0, 0, -983041, 0, 0, -917505, 0, 0, -851969, 0, 0, -786433, 0, 0, -1114112, 0, 0, -1048576, 0, 0, -983040, 0, 0, -917504, 0, 0, -851968, 0, 0, -1376257, 0, 0, -1310721, 0, 0, -1245185, 0, 0, -1179649, 0, 0, -1114113, 0, 0, -1441792, 0, 0, -1376256, 0, 0, -1310720, 0, 0, -1245184, 0, 0, -1179648, 0, 0, -1703937, 0, 0, -1638401, 0, 0, -1572865, 0, 0, -1507329, 0, 0, -1441793, 0, 0, -1769472, 0, 0, -1703936, 0, 0, -1638400, 0, 0, -1572864, 0, 0, -1507328, 0, 0, -2031617, 0, 0, -1966081, 0, 0, -1900545, 0, 0, -1835009, 0, 0, -1769473, 0, 0, -2097152, 0, 0, -2031616, 0, 0, -1966080, 0, 0, -1900544, 0, 0, -1835008, 0, 0, -2293761, 0, 0, -2228225, 0, 0, -2162689, 0, 0, -2097153, 0, 0, -2359296, 0, 0, -2293760, 0, 0, -2228224, 0, 0, -2162688, 0, 0, -2359297, 0, 0, -2424832, 0, 0, -2686977, 0, 0, -2621441, 0, 0, -2555905, 0, 0, -2490369, 0, 0, -2424833, 0, 0, -2752512, 0, 0, -2686976, 0, 0, -2621440, 0, 0, -2555904, 0, 0, -2490368, 0, 0)
layer_2/name = "illusion"
layer_2/z_index = 100
layer_2/tile_data = PackedInt32Array()

[node name="spawnpoints" type="Node2D" parent="."]

[node name="0" type="Marker2D" parent="spawnpoints"]

[node name="1" type="Marker2D" parent="spawnpoints"]
position = Vector2(0, -2752)

[node name="camera" type="Marker2D" parent="spawnpoints/1"]
position = Vector2(0, -1318)

[node name="switch" parent="." instance=ExtResource("5_4jtgv")]
position = Vector2(0, 128)
event = 1

[node name="camera_anchor" type="Area2D" parent="." groups=["gizmo"]]
script = ExtResource("22_pfl8q")

[node name="hitbox" type="CollisionShape2D" parent="camera_anchor"]
scale = Vector2(1.00583, 1)
shape = SubResource("RectangleShape2D_a1c1y")

[node name="start" type="Marker2D" parent="camera_anchor"]
position = Vector2(0, 128)

[node name="end" type="Marker2D" parent="camera_anchor"]
position = Vector2(0, -2752)

[node name="trigger_area" type="Area2D" parent="." groups=["gizmo"]]
position = Vector2(0, -2752)
script = ExtResource("22_pfl8q")

[node name="hitbox" type="CollisionShape2D" parent="trigger_area"]
scale = Vector2(1.00583, 1)
shape = SubResource("RectangleShape2D_a1c1y")

[node name="start" type="Marker2D" parent="trigger_area"]
position = Vector2(-400, -1024)

[node name="end" type="Marker2D" parent="trigger_area"]
position = Vector2(400, -1024)

[node name="block_spawn" type="Marker2D" parent="."]
position = Vector2(0, -2624)

[node name="boss_spawn" type="Marker2D" parent="."]
position = Vector2(0, -4256)

[node name="boss_spawn_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="post_boss_death_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="audio_player" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="camera_anchor" to="camera_anchor" method="_on_area_entered"]
[connection signal="area_entered" from="trigger_area" to="." method="_on_trigger_area_area_entered"]
[connection signal="area_entered" from="trigger_area" to="trigger_area" method="_on_area_entered"]
[connection signal="timeout" from="boss_spawn_timer" to="." method="_on_boss_spawn_timer_timeout"]
[connection signal="timeout" from="post_boss_death_timer" to="." method="_on_post_boss_death_timer_timeout"]
